# xiaoxiaole

./: CMakeLists.txt  README.md  build_x64_with_vcpkg.bat  package.json  readme.md
Classes/: AppDelegate.cpp  AppDelegate.h  BoardRenderer.cpp  BoardRenderer.h  GameBoard.cpp  GameBoard.h  GameScene.cpp  GameScene.h  main.cpp
assets/: readme.md
assets/docs/design/: development_order.md
assets/docs/plan/: PR4.md  PR4（特效、障碍物与结算逻辑）.md
assets/resourse/font/: fnt_biao.fnt  fnt_level2.fnt  fnt_miaobian.fnt  glodnumber.fnt
assets/resourse/picture/: img_ig_candy.tps
docs/: game_rule.md
docs/design/: development_order.md  spec.md
docs/plan/: PR1（基础工程与棋盘底座）.md  PR2-interaction-swap.md  PR3（基础消除、下落与补充）.md  PR4（特效、障碍物与结算逻辑）.md  PR5-ui-reset-config-cleanup.md
proj.win32/: main.cpp  main.h
resourse/font/: btn_prop_num.fnt  fnt_bian.fnt  fnt_commen.fnt  fnt_lv-export.fnt  kt_shu.fnt  lvnumber.fnt  shark_top_order.fnt
resourses/font/: cd.fnt  combo_shu-export.fnt  fnt_bomb.fnt  fnt_huang-export.fnt  fnt_level.fnt  monster.fnt  shark_xing.fnt  shop_shu.fnt
resourses/picture/: img_game_common.tps
resourses/picture/__MACOSX/: ._img_ig_candy  ._img_ig_candy.tps
